# vvc-extension-mm

./: .gitignore  360Lib-13.1_README.txt  360Lib-CMakeReadme.txt  CMakeLists.txt  README.md
cfg-360Lib/: encoder_180_HCMP.cfg  encoder_180_HEAC.cfg  encoder_360_ACP.cfg  encoder_360_AEP.cfg  encoder_360_CISP.cfg  encoder_360_CMP.cfg  encoder_360_COHP.cfg  encoder_360_EAC.cfg  encoder_360_ECP.cfg  encoder_360_ERP.cfg  encoder_360_Fisheye.cfg  encoder_360_GCMP.cfg  encoder_360_GCMPSEI.cfg  encoder_360_HEC.cfg  encoder_360_PERP.cfg  encoder_360_RSP.cfg  encoder_360_SSP_vert.cfg  encoder_360_TSP.cfg
cfg-360Lib/360Lib/: 360convert_ACP_ERP.cfg  360convert_ACP_RVP.cfg  360convert_AEP_AEP.cfg  360convert_AEP_CISP.cfg  360convert_AEP_COHP2.cfg  360convert_AEP_Cubemap3x2.cfg  360convert_AEP_Cubemap4x3.cfg  360convert_AEP_ERP.cfg  360convert_AEP_ISP.cfg  360convert_AEP_OHP.cfg  360convert_AEP_RVP.cfg  360convert_CISP_AEP.cfg  360convert_CISP_CISP.cfg  360convert_CISP_COHP2.cfg  360convert_CISP_Cubemap3x2.cfg  360convert_CISP_Cubemap4x3.cfg  360convert_CISP_ERP.cfg  360convert_CISP_ISP.cfg  360convert_CISP_OHP.cfg  360convert_CISP_RVP.cfg  360convert_COHP1_ERP.cfg  360convert_COHP2_AEP.cfg  360convert_COHP2_CISP.cfg  360convert_COHP2_COHP2.cfg  360convert_COHP2_Cubemap3x2.cfg  360convert_COHP2_Cubemap4x3.cfg  360convert_COHP2_ERP.cfg  360convert_COHP2_ISP.cfg  360convert_COHP2_OHP.cfg  360convert_COHP2_RVP.cfg  360convert_Cubemap3x2SEI_ERP.cfg  360convert_Cubemap3x2SEI_RVP.cfg  360convert_Cubemap3x2_AEP.cfg  360convert_Cubemap3x2_CISP.cfg  360convert_Cubemap3x2_COHP2.cfg  360convert_Cubemap3x2_Cubemap3x2.cfg  (+93 more)
source/Lib/AppEncHelper360/: CMakeLists.txt  TExt360AppEncCfg.cpp  TExt360AppEncCfg.h  TExt360AppEncTop.cpp  TExt360AppEncTop.h  TExt360EncAnalyze.cpp  TExt360EncAnalyze.h  TExt360EncGop.cpp  TExt360EncGop.h
(+186 files in other folders)
